# hermes

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  demo.cast  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  link-checker.lock.yml  release.yml  typo-checker.lock.yml  upstream-monitor.lock.yml
charts/deepep-internode-test/: Chart.yaml  README.md  values.yaml
charts/deepep-internode-test/templates/: NOTES.txt  configmap.yaml  jobset.yaml  master-job.yaml  service.yaml  worker-jobs.yaml
charts/deepep-internode-test/templates/tests/: test-connection.yaml
charts/deepep-lowlatency-test/: Chart.yaml  values.yaml
charts/deepep-lowlatency-test/templates/: NOTES.txt  configmap.yaml  jobset.yaml  master-job.yaml  service.yaml  worker-job.yaml
charts/deepep-lowlatency-test/templates/tests/: test-connection.yaml
charts/deepgemm-minimal-test/: Chart.yaml  README.md  values.yaml
charts/deepgemm-minimal-test/templates/: NOTES.txt  configmap.yaml  jobset.yaml  node1-job.yaml  node2-job.yaml
charts/deepgemm-minimal-test/templates/tests/: test-connection.yaml
charts/deepgemm-simple-test/: Chart.yaml  values.yaml
charts/deepgemm-simple-test/templates/: NOTES.txt  configmap.yaml  jobset.yaml  node1-job.yaml  node2-job.yaml
charts/deepgemm-simple-test/templates/tests/: test-job-status.yaml
charts/ib-write-bw-test/: Chart.yaml  values.yaml
charts/ib-write-bw-test/templates/: configmap.yaml  jobset.yaml
charts/nixl-kvbench/: Chart.yaml  values.yaml
charts/nixl-kvbench/templates/: configmap.yaml  etcd.yaml  job.yaml
charts/nixl-transfer-test/: Chart.yaml  values.yaml
charts/nixl-transfer-test/templates/: NOTES.txt  configmap.yaml  initiator-job.yaml  jobset.yaml  scc-rolebinding.yaml  service.yaml  serviceaccount.yaml  target-job.yaml
charts/nixl-transfer-test/templates/tests/: test-connection.yaml
charts/pplx-kernels-test/: Chart.yaml  values.yaml
charts/pplx-kernels-test/templates/: NOTES.txt  configmap.yaml  jobset.yaml  master-job.yaml  service.yaml  worker-job.yaml
charts/pplx-kernels-test/templates/tests/: test-connection.yaml
docs/: WORKLOAD_GUIDE.md
hca-probe/: .gitignore  Cargo.toml  Dockerfile  README.md
hca-probe/docker/: Dockerfile
hca-probe/src/: iface_hca.rs  lib.rs  main.rs  sysfs.rs  vf_map.rs
helm-plugins/hermes-topology/: plugin.yaml
hermes/: Cargo.toml  build.rs
hermes/examples/: helm_demo.rs
hermes/src/: analyzer.rs  embedded_files.rs  formatters.rs  helm.rs  helm_quickstart.md  helm_values.rs  lib.rs  main.rs  models.rs  node_selector.rs  nvidia_network.rs  platforms.rs  roce_scan.rs  self_test.rs  topology_selector.rs
hermes/src/crds/: jobsets.rs  mod.rs  nvidia_network.rs
hermes/src/workloads/: deepep_internode.rs  deepep_low_latency.rs  deepgemm_minimal.rs  deepgemm_simple.rs  ib_write_bw.rs  mod.rs  nixl_transfer.rs  pplx_kernels.rs
manifests/01_nixl_transfer/: initiator-entrypoint.sh  manifest.yaml.j2  nixl-transfer-test.py  target-entrypoint.sh
manifests/02_deepgemm_minimal/: deepgemm-minimal-test.py  manifest.yaml.j2  node2-entrypoint.sh
manifests/03_deepgemm_simple/: deepgemm-simple-test.py  manifest.yaml.j2  node2-entrypoint.sh
manifests/04_pplx_kernels/: manifest.yaml.j2  master-entrypoint.sh  worker-entrypoint.sh
manifests/05_deepep_internode/: manifest.yaml.j2  master-entrypoint.sh  test.py  worker-entrypoint.sh
manifests/05_deepep_intranode/: manifest.yaml.j2
manifests/06_deepep_low_latency/: diagnostics.sh  manifest.yaml.j2  master-entrypoint.sh  worker-entrypoint.sh
manifests/_common/: README.md  configmap.yaml.j2  labels.yaml.j2  pod_metadata_env.yaml.j2  resources.yaml.j2  sriov.yaml.j2  ucx_env.yaml.j2  volumes.yaml.j2
roce-detector/: Cargo.toml  Dockerfile  README.md
roce-detector/docker/: Dockerfile  system-packages.txt
roce-detector/src/: iface_hca.rs  iface_ip.rs  iommu_acs.rs  lib.rs  main.rs  sysfs.rs
src/: analyzer.rs  cache.rs  embedded_files.rs  formatters.rs  lib.rs  main.rs  models.rs  platforms.rs  self_test.rs  topology_rule.rs  topology_selector.rs
src/crds/: mod.rs  sriovnetworknodepolicies.rs  sriovnetworks.rs
src/workloads/: deepep_internode.rs  deepep_intranode.rs  deepep_low_latency.rs  deepgemm_minimal.rs  deepgemm_simple.rs  mod.rs  nixl_transfer.rs  pplx_kernels.rs
tests/: snapshot_tests.rs
