[package]
name = "hermes"
version = "0.2.5"
edition = "2024"

[dependencies]
kube = { version = "2.0.1", features = ["derive", "http-proxy"] }
schemars = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
k8s-openapi = { version = "0.26.0", features = ["v1_31"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
prettytable-rs = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
minijinja = { version = "2.0", features = ["preserve_order"] }
owo-colors = "4.0"
tokio-stream = "0.1"
dirs = "5.0"
sha2 = "0.10"
once_cell = "1.19"

[build-dependencies]
base64 = "0.22"

[dev-dependencies]
insta = { version = "1.40", features = ["yaml", "json", "redactions"] }
