[package]
name = "hca-probe"
version = "0.3.0"
edition.workspace = true

[lib]
name = "hca_probe"
path = "src/lib.rs"

[[bin]]
name = "hca-probe"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json = { version = "1.0", default-features = false, features = ["std"] }
anyhow.workspace = true
argh = "0.1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std"] }
sideway = "0.4"
nix = { version = "0.29", default-features = false, features = ["sched", "net"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
