[package]
name = "hermes"
version = "0.2.6-rc.2"
edition.workspace = true

[dependencies]
kube = { version = "2.0.1", features = ["derive", "http-proxy", "runtime"] }
schemars = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
k8s-openapi = { version = "0.26.0", features = ["v1_31"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
anyhow.workspace = true
clap.workspace = true
prettytable-rs = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
minijinja = { version = "2.0", features = ["preserve_order"] }
owo-colors = "4.0"
tokio-stream = "0.1"
dirs = "5.0"
sha2 = "0.10"
once_cell = "1.19"
cel = { version = "0.11", features = ["regex"] }
regex = "1.10"
base64 = "0.22"

[build-dependencies]
base64 = "0.22"

[dev-dependencies]
insta = { version = "1.40", features = ["yaml", "json", "redactions"] }
