[package]
name = "roce-detector"
version = "0.1.1-rc.2"
edition.workspace = true

[lib]
name = "roce_detector"
path = "src/lib.rs"

[[bin]]
name = "roce-detector"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sideway = "0.3"
nix = { version = "0.29", features = ["sched", "process"] }
